Fix Icon alignment

--- a/frontend/src/components/Icon.css
+++ b/frontend/src/components/Icon.css
@@ -1,3 +1,3 @@
 .Icon {
-  vertical-align: bottom;
+  vertical-align: middle;
 }
